# thesis

./: .gitignore  README.md  orderer.sh  peer.sh
app/: app.py  network.json  pyproject.toml  test.py
app/templates/: api_demo_callback.html  api_select_documents.html  home.html  topology.html
config/: configtx.yaml  core.yaml  orderer.yaml
fabric-ca/clients/admin/: fabric-ca-client-config.yaml
fabric-ca/clients/admin/msp/: IssuerRevocationPublicKey  config.yaml
fabric-ca/clients/admin/msp/keystore/: 1222d6104fd6b9112ef9143966730358f21ebb2b2acde1ba5893fce408775425_sk  31bd17ab5504c0871b8d0ac7db084936f8c007b0cb57f1f249e2dc19623dc8fb_sk  e31782fbbbbf688ce6129af2c464cda26b4686f9a6a736e93d28751fdc9fbe94_sk
fabric-ca/clients/admin/msp/signcerts/: cert.pem
fabric-ca/clients/peer1/: fabric-ca-client-config.yaml
fabric-ca/clients/peer1/msp/: IssuerPublicKey  config.yaml
fabric-ca/clients/peer1/msp/keystore/: 258fde5df74dad5d023a03a2bcd39804500dc59f35a00a2eb5855cd48601d7f5_sk
fabric-ca/clients/peer1/msp/signcerts/: cert.pem
fabric-ca/clients/user1/: fabric-ca-client-config.yaml
fabric-ca/clients/user1/msp/cacerts/: localhost-7054.pem
fabric-ca/clients/user1/msp/keystore/: f4a0f8078a5158d27f784d0cd50147a687bc088d9d750ebdbdde7ee225912f82_sk
fabric-ca/clients/user1/msp/signcerts/: cert.pem
yaramo-chaincode/: .gitignore  invoke.sh  package-lock.json  package.json  pyproject.toml  run.sh  tsconfig.json  tslint.json  verify_yaramo_instance.py
yaramo-chaincode/src/: index.ts  yaramo.ts  yaramoContract.ts
