[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}
fabric-sdk-py = {path = "../../fabric-sdk-py"}
orm-importer = {git = "https://github.com/simulate-digital-rail/orm-importer", rev = "update-numpy"}
flask = "^3.0.2"
planpro-importer = {git = "https://github.com/simulate-digital-rail/planpro-importer"}
planpro-exporter = {git = "https://github.com/simulate-digital-rail/planpro-exporter"}
simplejson = "^3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
