[tool.poetry]
name = "yaramo-chaincode"
version = "0.1.0"
description = ""
authors = ["Julian B. <jeriox@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "yaramo_chaincode"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}
railml-exporter = {git = "https://github.com/simulate-digital-rail/railml-exporter"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
